<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    >
    <Button
        android:id="@+id/button_layout_main_textviewdemo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_en_textviewdemo"
        android:onClick="MyOnClick"
        />
    <Button
        android:id="@+id/button_layout_main_buttondemo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="MyOnClick"
        android:text="@string/string_en_buttondemo"
        />
    <Button
        android:id="@+id/button_layout_main_radiobuttondemo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_en_radiobuttondemo"
        android:onClick="MyOnClick"
        />
    <Button
        android:id="@+id/button_layout_main_imageviewdemo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="MyOnClick"
        android:text="@string/string_en_imageviewdemo"
        />
    <Button
        android:id="@+id/button_layout_main_spinnerdemo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="MyOnClick"
        android:text="@string/string_en_spinnerdemo"
        />
</LinearLayout>
