<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <!--可以用styles.xml文件设定好属性，用于减少重复使用的属性-->
        <!--设置android:lines来改变其固定行数-->
        <!--使用android:maxlines与minlines来设置行数-->
        <!--使用android:scrollHorizontally来设置横拉条-->
        <!--使用android:singleline设置，使得长度溢出单行时用省略号替代-->
        <TextView
            style="@style/TextViewAndEditTextLayout"
            android:layout_weight="2"
            android:text="@string/string_cn_users"
            android:gravity="center"
            />
        <!--android:hint与android:text区别.
        前者是只会在EditText为空时显示;
        后者是直接将内容填入EditText中-->
        <EditText
            style="@style/TextViewAndEditTextLayout"
            android:layout_weight="6"
            android:hint="@string/string_cn_plsinputusers"
            android:maxLength="16"
            android:background="@drawable/tvbackground"
            />
        <TextView
            android:layout_weight="1"
            style="@style/UnableNull"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TextView
            style="@style/TextViewAndEditTextLayout"
            android:layout_weight="2"
            android:text="@string/string_cn_setpswd"
            android:gravity="center"
            />
        <!--此处输入为密码类型，所有的输入都会显示为黑点-->
        <EditText
            style="@style/TextViewAndEditTextLayout"
            android:layout_weight="6"
            android:hint="@string/string_cn_plsinputpswd"
            android:inputType="textPassword"
            android:maxLength="16"
            android:background="@drawable/tvbackground"
            />
        <TextView
            android:layout_weight="1"
            style="@style/UnableNull"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TextView
            style="@style/TextViewAndEditTextLayout"
            android:layout_weight="2"
            android:text="@string/string_cn_repeatpswd"
            android:gravity="center"
            />
        <!--设置android:padding来设置与框的边界的距离-->
        <!--设置android:digits来设置可输入的字符-->
        <!--使用android:background设置xml文件为背景-->
        <EditText
            style="@style/TextViewAndEditTextLayout"
            android:layout_weight="6"
            android:hint="@string/string_cn_plsrepeatpswd"
            android:inputType="textPassword"
            android:maxLength="16"
            />
        <TextView
            android:layout_weight="1"
            style="@style/UnableNull"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TextView
            style="@style/TextViewAndEditTextLayout"
            android:layout_weight="2"
            android:text="@string/string_cn_mobilephonenum"
            android:gravity="center"
            />
        <!--此处输入为数字类型，所有的输入都会显示为数字-->
        <EditText
            style="@style/TextViewAndEditTextLayout"
            android:layout_weight="6"
            android:hint="@string/string_cn_plsinputmobilephonenum"
            android:inputType="number"
            android:maxLength="13"
            />
        <TextView
            android:layout_weight="1"
            style="@style/UnableNull"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <!--使用android:scrollHorizontally添加横拉条，让用户能看完整的TextView-->
        <!--可以设置android:drawableTop等其他方向的图片-->
        <TextView
            style="@style/TextViewAndEditTextLayout"
            android:layout_weight="3"
            android:text="@string/string_cn_downloadwebsite"
            android:gravity="center"
            android:ellipsize="end"
            android:drawableRight="@mipmap/ic_launcher_round"
            />
        <!--可以根绝android:autoLink的值设置超链接的类型-->
        <TextView
            android:layout_weight="5"
            style="@style/TextViewAndEditTextLayout"
            android:autoLink="all"
            android:text="@string/string_en_url"
            />
    </LinearLayout>
</LinearLayout>
