<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <!--每个图片设置后面都有TextView作为注释-->
    <!--android:background="#555555"将ImageView背景设置为灰色，可以看到ImageView的实际大小。-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#555555"
            android:src="@mipmap/ic_launcher"
            />
        <TextView
            style="@style/imageviewtext"
            android:text="@string/string_cn_imagedefault"
            android:layout_gravity="center"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:background="#555555"
            android:src="@mipmap/ic_launcher"
            />
        <TextView
            style="@style/imageviewtext"
            android:text="@string/string_cn_xy"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@mipmap/ic_launcher"
            android:scaleType="matrix"
            android:background="#555555"
            />
        <TextView
            style="@style/imageviewtext"
            android:text="@string/string_cn_matrix_30"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:src="@mipmap/ic_launcher"
            android:scaleType="matrix"
            android:background="#555555"
            />
        <TextView
            style="@style/imageviewtext"
            android:text="@string/string_cn_martix"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:src="@mipmap/ic_launcher"
            android:background="#555555"
            android:scaleType="fitXY"
            />
        <TextView
            style="@style/imageviewtext"
            android:text="@string/string_cn_fitxy"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:src="@mipmap/ic_launcher"
            android:scaleType="fitStart"
            android:background="#555555"
            />
        <TextView
            style="@style/imageviewtext"
            android:text="@string/string_cn_fitstart"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:src="@mipmap/ic_launcher"
            android:scaleType="fitCenter"
            android:background="#555555"
            />
        <TextView
            style="@style/imageviewtext"
            android:text="@string/string_cn_fitcenter"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:src="@mipmap/ic_launcher"
            android:scaleType="fitEnd"
            android:background="#555555"
            />
        <TextView
            style="@style/imageviewtext"
            android:text="@string/string_cn_fitend"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:src="@mipmap/ic_launcher"
            android:scaleType="center"
            android:background="#555555"
            />
        <TextView
            style="@style/imageviewtext"
            android:text="@string/string_cn_centercrop"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:src="@mipmap/ic_launcher"
            android:scaleType="centerInside"
            android:background="#555555"
            />
        <TextView
            style="@style/imageviewtext"
            android:text="@string/string_cn_centerinside"
            />
    </LinearLayout>
</LinearLayout>
