<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#aaaaaa"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_cn_malerofemale"
        />
    <!--此处为默认样式的radiobutton。可用radiogroup管理radiobutton。-->
    <RadioGroup
        android:id="@+id/rgrp1_layout_radiobuttonandcheckbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        >
        <RadioButton
            android:id="@+id/rbtnmale_rgrp1_layout_radiobuttonandcheckbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/string_cn_male"
            />
        <RadioButton
            android:id="@+id/rbtnfemale_rgrp1_layout_radiobuttonandcheckbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_cn_female"
            />
    </RadioGroup>
    <!--自定义样式的radiobutton，
    先使用android:button="@null"，
    再使用drawbale来添加自定义的样式的图形文件，这里使用的是check.xml。
    -->
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/rgrp2_layout_radiobuttonandcheckbox"
        android:orientation="horizontal"
        >
        <RadioButton
            android:id="@+id/rbtnmale_rgrp2_layout_radiobuttonandcheckbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_cn_male"
            android:checked="true"
            android:button="@null"
            android:drawableLeft="@drawable/check"
            />
        <RadioButton
            android:id="@+id/rbtnfemale_rgrp2_layout_radiobuttonandcheckbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_cn_female"
            android:button="@null"
            android:drawableLeft="@drawable/check"
            />
    </RadioGroup>
    <!--checkbox默认样式-->
    <CheckBox
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_cn_rememberpswd"
        />
    <!--checkbox自定义样式与raidobutton相同-->
    <CheckBox
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:button="@null"
        android:drawableLeft="@drawable/check"
        android:text="@string/string_cn_rememberpswd"
        />
</LinearLayout>
